--- a/BarcosReservaUsuario.html
+++ b/BarcosReservaUsuario.html
@@ -86,6 +86,7 @@
             siguente_pantalla(i) {
                 this.form_reserva.id_vote = i.id
                 this.form_resumen.nombre_bote = i.nombre
+                this.form_resumen.image_bote = i.principal
                 this.cant_personas = i.cant_pasajeros
                 if (this.auxiliares.tipo_reserva == 'fecha') {
                     this.pantalla = 'ReservaUsuarioHoras'
