--- a/ReservaUsuarioAsistencia.html
+++ b/ReservaUsuarioAsistencia.html
@@ -66,7 +66,8 @@
             <div class="container mt-3">
                 <div class="d-flex">
                     <button class="btn btn-next-extra" @click="next_asistencia()"><span>Siguiente</span> <i
-                            class="fas fa-arrow-alt-circle-right f-12 position-relative" style="top: 0.1rem;"></i></button>
+                            class="fas fa-arrow-alt-circle-right f-12 position-relative"
+                            style="top: 0.1rem;"></i></button>
                 </div>
             </div>
         </div>
@@ -145,6 +146,8 @@
                 if (this.form_reserva.cant_adultos == 0) {
                     Swal.fire('', 'Debe ir por lo menos un adulto', 'error')
                 } else {
+                    this.form_resumen.cant_adultos = this.form_reserva.cant_adultos
+                    this.form_resumen.cant_ninios = this.form_reserva.cant_tres_doce + this.form_reserva.cant_uno_tres + this.form_reserva.cant_bebes
                     this.pantalla = 'ReservaUsuarioExtra'
                 }
             }
