--- a/ReservaUsuarioResponsable.html
+++ b/ReservaUsuarioResponsable.html
@@ -149,6 +149,7 @@
                 this.form_reserva.image = $('#blah').attr('src');
                 let url = this.base_url + '/BoatsLaravel/public/reserva/val_store_user_reserva'
                 axios.post(url, this.form_reserva).then(res => {
+                    this.form_resumen.responsable = this.form_reserva.nombre
                     this.pantalla = 'ReservaUsuarioAsistencia'
                 }).catch(errors => {
                     var error = Object.values(errors.response.data.errors)[0][0];
