--- a/ReservaUsuarioExtra.html
+++ b/ReservaUsuarioExtra.html
@@ -141,6 +141,21 @@
             },
             getExtras_to_form_reserva() {
                 this.form_reserva.extras = this.extras
+                this.form_reserva.extras.forEach(tipo_extras => {
+                    tipo_extras.forEach(extra => {
+                        console.log('extra ==> ', extra.count);
+                    })
+                })
+                // foreach($form_reserva['extras'] as $tipo_extras) :
+                // foreach($tipo_extras as $extra) {
+                //     foreach($extra['detalles'] as $value) {
+                //         if ($value['count'] > 0) {
+                //             $valor_extras += $value['valor'] * $value['count'];
+                //             array_push($extras, ['id_extra_detalle' => $value['id'], 'cantidad' => $value['count']]);
+                //         }
+                //     }
+                // }
+                // endforeach;
                 this.pantalla = 'ReservaUsuarioPagos'
             }
         }
