--- a/ReservaUsuarioResume.html
+++ b/ReservaUsuarioResume.html
@@ -70,7 +70,7 @@
                             <label class="label-txt" x-text="form_resumen.responsable"></label>
                         </div>
                     </template>
-                    <template x-if="form_resumen.cant_ninios">
+                    <template x-if="form_resumen.cant_adultos">
                         <div class="d-flex justify-content-between mt-2 m-1">
                             <div class="d-flex">
                                 <div>
@@ -89,7 +89,7 @@
 
                     <hr>
 
-                    <div class="d-flex justify-content-between mt-2 m-1">
+                    <!-- <div class="d-flex justify-content-between mt-2 m-1">
                         <div class="d-flex">
                             <div>
                                 <button class="ico-circle"> <i class="fa-solid fa-vest"></i> </button>
@@ -103,21 +103,21 @@
                             <label class="label-txt m-0">30€</label>
                             <label class="label-txt m-0">45€</label>
                         </div>
-                    </div>
+                    </div> -->
 
                     <hr>
 
-                    <div class="d-flex justify-content-between m-1 mt-2">
+                    <!-- <div class="d-flex justify-content-between m-1 mt-2">
                         <div class="d-flex">
                             <button class="ico-circle"> <i class="fa-solid fa-credit-card"></i> </button>
                             <label class="color-dark-extras"> Reserva flexible </label>
                         </div>
                         <label class="label-txt-blu f-9 mt-1">25€</label>
-                    </div>
+                    </div> -->
 
                     <hr>
 
-                    <table class="w-100">
+                    <!-- <table class="w-100">
                         <thead class="bg-blue color-white">
                             <tr>
                                 <th class="ps-2 p-1">Total:</th>
@@ -140,7 +140,7 @@
                                 </td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
         </div>
