--- a/ReservaUsuarioResume.html
+++ b/ReservaUsuarioResume.html
@@ -55,7 +55,7 @@
                     </template>
                     <template x-if="form_resumen.hora_inicio">
                         <div class="d-flex justify-content-end">
-                            <label class="label-txt-blu">+75€</label>
+                            <label class="label-txt-blu" x-text="'+' + form_resumen.valor_extras + '€'">+75€</label>
                         </div>
                     </template>
 
@@ -89,21 +89,30 @@
 
                     <hr>
 
-                    <!-- <div class="d-flex justify-content-between mt-2 m-1">
-                        <div class="d-flex">
-                            <div>
-                                <button class="ico-circle"> <i class="fa-solid fa-vest"></i> </button>
+                    <template x-if="form_resumen.extras.length > 0">
+                        <div class="d-flex justify-content-between mt-2 m-1">
+                            <div class="d-flex">
+                                <div>
+                                    <button class="ico-circle"> <i class="fa-solid fa-vest"></i> </button>
+                                </div>
+                                <div class="d-flex flex-column labels-regreso">
+                                    <template x-for="i in form_resumen.extras">
+                                        <div>
+                                            <label class="color-dark-extras m-0"
+                                                x-text="i.nombre + ' ' + i.descripcion + ' x ' + i.cantidad"></label>
+                                        </div>
+                                        <!-- <label class="color-dark-extras m-0">Set clásico de chaleoos x 5</label> -->
+                                    </template>
+                                </div>
                             </div>
-                            <div class="d-flex flex-column labels-regreso">
-                                <label class="color-dark-extras m-0">Aletas x 3</label>
-                                <label class="color-dark-extras m-0">Set clásico de chaleoos x 5</label>
+                            <div class="d-flex flex-column align-items-end">
+                                <template x-for="i in form_resumen.extras">
+                                    <label class="label-txt m-0" x-text="i.precio + '€'"></label>
+                                </template>
+                                <!-- <label class="label-txt m-0">45€</label> -->
                             </div>
                         </div>
-                        <div class="d-flex flex-column align-items-end">
-                            <label class="label-txt m-0">30€</label>
-                            <label class="label-txt m-0">45€</label>
-                        </div>
-                    </div> -->
+                    </template>
 
                     <hr>
 
@@ -117,11 +126,11 @@
 
                     <hr>
 
-                    <!-- <table class="w-100">
+                    <table class="w-100">
                         <thead class="bg-blue color-white">
                             <tr>
                                 <th class="ps-2 p-1">Total:</th>
-                                <th class="text-right pe-2 p-1">241 €</th>
+                                <th class="text-end pe-2 p-1" x-text="form_resumen.total + '€'"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -140,7 +149,7 @@
                                 </td>
                             </tr>
                         </tbody>
-                    </table> -->
+                    </table>
                 </div>
             </div>
         </div>
