--- a/ReservaUsuarioPagos.html
+++ b/ReservaUsuarioPagos.html
@@ -215,9 +215,11 @@
     function ReservaUsuarioPagos() {
         return {
             finalizar_reserva() {
+                this.loading = true
                 let url = this.base_url + '/BoatsLaravel/public/reserva/store-reserva'
                 axios.post(url, { form_reserva: this.form_reserva, precio_horas_extra: this.precio_horas_extra }).then(res => {
                     this.form_reserva.id = res.data.id
+                    this.loading = false
                     this.pantalla = 'ReservaUsuarioFinal'
                 })
             }
