--- a/ReservaUsuarioPagos.html
+++ b/ReservaUsuarioPagos.html
@@ -1,13 +1,17 @@
 <template x-if="pantalla == 'ReservaUsuarioPagos'">
     <div x-data="ReservaUsuarioPagos()">
         <div class="container">
-            <div class="mt-5 mb-3">
-                <h3 class="text-center title-principal-css"><b>Pagos</b></h3>
+            <div class="d-flex justify-content-between mb-3">
                 <div>
-                    <div class="icon-gray btn-atras-pagos">
-                        <i class="fa-solid fa-circle-arrow-left"></i> Atrás
-                    </div>
+                    <button class="btn-atras" @click="regresar_pantalla()">
+                        <i class="fa-solid fa-circle-arrow-left"></i>
+                        <strong>Atrás</strong>
+                    </button>
                 </div>
+                <div>
+                    <h5> Pagos </h5>
+                </div>
+                <div></div>
             </div>
 
             <div class="container-fluid mb-4">
@@ -222,6 +226,9 @@
                     this.loading = false
                     this.pantalla = 'ReservaUsuarioFinal'
                 })
+            },
+            regresar_pantalla() {
+                this.pantalla = 'ReservaUsuarioExtra'
             }
         }
     }
